<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <EditText
        android:id="@+id/login_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_user_input_normal_bg"
        android:hint="@string/login_phone_hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:maxLength="11"
        android:textColorHint="#B3B3B3"
        android:textSize="15sp"
        android:ellipsize="middle"
        android:theme="@style/RegisterEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_delete_number"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/ed_delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/login_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_phone_number" />


    <EditText
        android:paddingRight="80dp"
        android:id="@+id/login_verification_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:ellipsize="middle"
        android:textColor="@color/black"
        android:background="@drawable/shape_user_input_normal_bg"
        android:hint="@string/code_hint"
        android:inputType="number"
        android:maxLength="5"
        android:textColorHint="#B3B3B3"
        android:textSize="15sp"
        android:theme="@style/RegisterEditText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_phone_number" />

    <TextView
        android:id="@+id/login_get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:layout_marginRight="15dp"
        android:text="@string/get_code_hint"
        android:textColor="@color/theme_color"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="@+id/login_verification_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_verification_code" />

    <EditText
        android:layout_marginTop="24dp"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:ellipsize="middle"
        android:background="@drawable/shape_user_input_normal_bg"
        android:hint="@string/login_pwd_hint"
        android:inputType="textPassword"
        android:textColorHint="#B3B3B3"
        android:textSize="15sp"
        android:theme="@style/RegisterEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_verification_code" />

    <ImageView
        android:id="@+id/login_show_pwd"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/pwd_show_normal"
        app:layout_constraintBottom_toBottomOf="@+id/login_password"
        app:layout_constraintEnd_toStartOf="@+id/login_delete_pwd"
        app:layout_constraintTop_toTopOf="@+id/login_password" />


    <ImageView
        android:id="@+id/login_delete_pwd"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginRight="15dp"
        android:src="@mipmap/ed_delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintTop_toTopOf="@+id/login_password" />

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_login_bt"
        android:enabled="false"
        android:text="@string/register_hint"
        android:textStyle="bold"
        android:layout_marginTop="42dp"
        android:textColor="@color/selector_bt_text_bg"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />


</androidx.constraintlayout.widget.ConstraintLayout>