<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_bg_color">

        <RelativeLayout
            android:id="@+id/loginToolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:src="@drawable/white_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="70dp"
            android:textColor="@color/theme_color"
            android:text="登录账号"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginToolbar" />


        <include
            android:id="@+id/includeLogin"
            android:layout_marginTop="49dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            layout="@layout/layout_phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/toForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/login_find_pwd_hint"
            android:textColor="@color/theme_color"
            app:layout_constraintEnd_toEndOf="@+id/includeLogin"
            app:layout_constraintTop_toBottomOf="@+id/includeLogin" />

        <Button
            android:id="@+id/toLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="38dp"
            android:layout_marginRight="34dp"
            android:background="@drawable/shape_login_bt_bg"
            android:text="@string/login_go_hint"
            android:textAllCaps="false"
            android:textColor="#081B39"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toForgetPwd" />

        <TextView
            android:id="@+id/toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/login_register_hint"
            android:textColor="@color/theme_color"
            app:layout_constraintStart_toStartOf="@+id/includeLogin"
            app:layout_constraintTop_toBottomOf="@+id/includeLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>